crates/parser/tests/snapshots/statements__gloss_fact.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(r#\"GLOSS unit ON orders.amount AS $${\"value\": \"EUR\", \"source_column\": \"currency_code\"}$$;\"#).expect(\"must parse\")"
---
[
    Gloss(
        Gloss {
            aspect: Ident {
                value: "unit",
                quote_style: None,
                span: Span(Location(1,7)..Location(1,11)),
            },
            subject: Path(
                Path {
                    segments: [
                        Ident {
                            value: "orders",
                            quote_style: None,
                            span: Span(Location(1,15)..Location(1,21)),
                        },
                        Ident {
                            value: "amount",
                            quote_style: None,
                            span: Span(Location(1,22)..Location(1,28)),
                        },
                    ],
                },
            ),
            body: JsonBody {
                value: Object {
                    "source_column": String("currency_code"),
                    "value": String("EUR"),
                },
                raw: "{\"value\": \"EUR\", \"source_column\": \"currency_code\"}",
            },
        },
    ),
]
