crates/parser/tests/snapshots/statements__gloss_on_pair_path.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(r#\"GLOSS fk_note ON orders.customer_id -> customers.id AS $${\"value\": \"2% orphaned rows\"}$$;\"#).expect(\"must parse\")"
---
[
    Gloss(
        Gloss {
            aspect: Ident {
                value: "fk_note",
                quote_style: None,
                span: Span(Location(1,7)..Location(1,14)),
            },
            subject: Pair(
                PairPath {
                    left: ColumnPath {
                        dataset: None,
                        table: Ident {
                            value: "orders",
                            quote_style: None,
                            span: Span(Location(1,18)..Location(1,24)),
                        },
                        column: Ident {
                            value: "customer_id",
                            quote_style: None,
                            span: Span(Location(1,25)..Location(1,36)),
                        },
                    },
                    op: ManyToOne,
                    right: ColumnPath {
                        dataset: None,
                        table: Ident {
                            value: "customers",
                            quote_style: None,
                            span: Span(Location(1,40)..Location(1,49)),
                        },
                        column: Ident {
                            value: "id",
                            quote_style: None,
                            span: Span(Location(1,50)..Location(1,52)),
                        },
                    },
                },
            ),
            body: JsonBody {
                value: Object {
                    "value": String("2% orphaned rows"),
                },
                raw: "{\"value\": \"2% orphaned rows\"}",
            },
        },
    ),
]
