crates/parser/tests/snapshots/statements__source_decl.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(\"DECLARE SOURCE crm SET (type: relational_db, location: 'postgres://crm.internal/prod', via: crm_prod);\").expect(\"must parse\")"
---
[
    Declare(
        Source(
            SourceDecl {
                name: Ident {
                    value: "crm",
                    quote_style: None,
                    span: Span(Location(1,16)..Location(1,19)),
                },
                settings: [
                    Setting {
                        key: Ident {
                            value: "type",
                            quote_style: None,
                            span: Span(Location(1,25)..Location(1,29)),
                        },
                        value: Name(
                            Ident {
                                value: "relational_db",
                                quote_style: None,
                                span: Span(Location(1,31)..Location(1,44)),
                            },
                        ),
                    },
                    Setting {
                        key: Ident {
                            value: "location",
                            quote_style: None,
                            span: Span(Location(1,46)..Location(1,54)),
                        },
                        value: String(
                            "postgres://crm.internal/prod",
                        ),
                    },
                    Setting {
                        key: Ident {
                            value: "via",
                            quote_style: None,
                            span: Span(Location(1,88)..Location(1,91)),
                        },
                        value: Name(
                            Ident {
                                value: "crm_prod",
                                quote_style: None,
                                span: Span(Location(1,93)..Location(1,101)),
                            },
                        ),
                    },
                ],
            },
        ),
    ),
]
