crates/parser/tests/snapshots/statements__witness_decl_full.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(\"DECLARE WITNESS behavior_w ON behavior BY (FUNCTION temporal_behavior, AGENT, HUMAN) DETECTOR behavior_entropy THRESHOLD 0.7;\").expect(\"must parse\")"
---
[
    Declare(
        Witness(
            WitnessDecl {
                name: Ident {
                    value: "behavior_w",
                    quote_style: None,
                    span: Span(Location(1,17)..Location(1,27)),
                },
                aspect: Ident {
                    value: "behavior",
                    quote_style: None,
                    span: Span(Location(1,31)..Location(1,39)),
                },
                speakers: [
                    Function(
                        Ident {
                            value: "temporal_behavior",
                            quote_style: None,
                            span: Span(Location(1,53)..Location(1,70)),
                        },
                    ),
                    Agent,
                    Human,
                ],
                detector: Some(
                    Ident {
                        value: "behavior_entropy",
                        quote_style: None,
                        span: Span(Location(1,95)..Location(1,111)),
                    },
                ),
                threshold: Some(
                    "0.7",
                ),
            },
        ),
    ),
]
