crates/parser/tests/snapshots/statements__witness_decl_minimal.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(\"DECLARE WITNESS min_max_w ON min_max BY (FUNCTION profile_min_max);\").expect(\"must parse\")"
---
[
    Declare(
        Witness(
            WitnessDecl {
                name: Ident {
                    value: "min_max_w",
                    quote_style: None,
                    span: Span(Location(1,17)..Location(1,26)),
                },
                aspect: Ident {
                    value: "min_max",
                    quote_style: None,
                    span: Span(Location(1,30)..Location(1,37)),
                },
                speakers: [
                    Function(
                        Ident {
                            value: "profile_min_max",
                            quote_style: None,
                            span: Span(Location(1,51)..Location(1,66)),
                        },
                    ),
                ],
                detector: None,
                threshold: None,
            },
        ),
    ),
]
